reemplaza Math.clamp incompatible con JDK 17 por Math.min/Math.max